Bug 283799 - Page Up / Page Down dont scroll to first / last entry
Summary: Page Up / Page Down dont scroll to first / last entry
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-11 16:35 UTC by schlatter@phys.ethz.ch
Modified: 2011-10-22 08:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Simple kmymoney file that reproduces the page-up/page-down bug all the time. (128.23 KB, text/xml)
2011-10-11 16:35 UTC, schlatter@phys.ethz.ch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description schlatter@phys.ethz.ch 2011-10-11 16:35:30 UTC
Created attachment 64418 [details]
Simple kmymoney file that reproduces the page-up/page-down bug all the time.

Version:           4.5.3 (using KDE 4.6.2) 
OS:                Linux

In some ledgers, the page up and page down keys don't do the last step of scrolling. This behaviour seems to depend on the particular .kmy file used. In some, both keys work as expected. In others, both do not work as expected. Finally, there are some, where one key works but the other does not.

Reproducible: Always

Steps to Reproduce:
Open the attached "PageUp-PageDown.anon.xml"
Open account Asset:A000003:A000004
Select the second-to-last entry with the mouse
Hit Page-down
Now, select the second entry from the top with the mouse
Hit Page-up

Actual Results:  
Page-down jumps to the last entry
Page-up does not do anything (the second entry remains selected)

Expected Results:  
I expect that page-down jumps to the last entry (which it does in this case).
I also expect that page-up jumps to the first entry (which it does *not*)

OS: Linux (i686) release 2.6.38-11-generic-pae
Compiler: cc

As mentioned in the summary, this bug seems to depend on the file used. Therefore, I have attached one that reproduces the bug all the time. Please note that this bug sometimes also affects *both* keys (page-down *and* page-up). If helpful, I can provide such files as well.
Comment 1 Thomas Baumgart 2011-10-13 16:50:44 UTC
SVN commit 1258831 by tbaumgart:

Fix page up/down cursor movement.

Needs backport to stable branch

BUG: 283799

 M  +4 -0      register.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1258831
Comment 2 Cristian Oneț 2011-10-22 08:04:25 UTC
SVN commit 1260148 by conet:

Fix page up/down cursor movement.

Backported to stable branch.

BUG: 283799



 M  +4 -0      register.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1260148