Fix page up/down cursor movement.

Needs backport to stable branch

BUG: 283799

svn path=/trunk/extragear/office/kmymoney/; revision=1258831